# debounced-signals

./: CHANGELOG.md  Cargo.toml  README.md  clippy.toml  rustfmt.toml
.github/workflows/: ci.yml
benches/: samples.rs
src/: active.rs  debounced.rs  lib.rs  status.rs
src/strategy/: integrator.rs  mod.rs  shift.rs  shift_const.rs  shift_generic.rs
