[package]
name = "bounced"
version = "0.1.0"
authors = ["Brendan Arciszewski <git@brendanarciszewski.ca>"]
edition = "2018"
description = "Debouncing and Testing for Signals and Buttons"
license = "Apache-2.0"
repository = "https://github.com/brendanarciszewski/debounced-signals"
documentation = "https://docs.rs/bounced"
readme = "README.md"
