[package]
name = "bounced"
version = "0.1.1"
authors = ["Brendan Arciszewski <git@brendanarciszewski.ca>"]
edition = "2018"
description = "Debouncing and Testing for Signals and Buttons"
license = "Apache-2.0"
repository = "https://github.com/brendanarciszewski/debounced-signals"
documentation = "https://docs.rs/bounced"
readme = "README.md"
keywords = ["debounce", "debouncer", "button"]
categories = ["embedded", "no-std"]

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "samples"
harness = false

[profile.bench.build-override]
opt-level = 3
